fix: submit button spacing

--- a/styles/componentsStyle/Select.module.scss
+++ b/styles/componentsStyle/Select.module.scss
@@ -63,3 +63,7 @@
     color: rgba(255, 255, 255, 1);
   }
 }
+
+.submitBtn {
+  margin: 86px 0 10.4167vw;
+}
